Apps/Gitea/gt-deploy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  selector:
    matchLabels:
      app: gitea
      tier: frontend
#  replicas: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
        tier: frontend
    spec:
      containers:
      - image: gitea/gitea:latest
        name: gitea
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
          name: gitea-http
        - containerPort: 22
          name: gitea-ssh
        volumeMounts:
        - name: gitea-persistent-storage
          mountPath: /data
      volumes:
      - name: gitea-persistent-storage
        persistentVolumeClaim:
          claimName: gt-pv-claim
