Apps/Gitea/gt-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: default
  labels:
    app: gitea
spec:
  selector:
    app: gitea
    tier: frontend
  ports:
    - name: gitea-http
      port: 3000
      targetPort: gitea-http
    - name: gitea-ssh
      port: 2222
      targetPort: gitea-ssh
  type: ClusterIP
