Apps/Gitea/mariadb-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-mariadb
  namespace: default
  labels:
    app: gitea
spec:
  ports:
    - port: 3306
  selector:
    app: gitea
    tier: mariadb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-mariadb
  namespace: default
  labels:
    app: gitea
spec:
  selector:
    matchLabels:
      app: gitea
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
        tier: mariadb
    spec:
      containers:
      - image: mariadb:latest
        name: mariadb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
