Apps/Gitea/gt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - gt.nube.casa
    secretName: gitea-tls
  rules:
  - host: gt.nube.casa
    http:
      paths:
      - backend:
          serviceName: gitea
          servicePort: 3000
      - path: /mdb
        backend:
          serviceName: gitea-mariadb
          servicePort: 3306
